--- a/css/bartik.css
+++ b/css/bartik.css
@@ -1,5 +1,5 @@
 /**
- * This is a work-around to prevent Bartik's CSS to influence Edit's styling.
+ * This is a work-around to prevent Bartik's CSS to influence Quick Edit's styling.
  *
  * @see https://drupal.org/node/2149261
  */
@@ -7,20 +7,20 @@
 /**
  * @group https://drupal.org/node/2149261
  */
-.edit-form-container .fieldset-wrapper {
+.quickedit-form-container .fieldset-wrapper {
   margin-top: 0;
 }
-.edit-form-container .filter-wrapper {
+.quickedit-form-container .filter-wrapper {
   padding-top: 0;
 }
-.edit-form-container .filter-wrapper .form-item label {
+.quickedit-form-container .filter-wrapper .form-item label {
   margin: 0;
 }
-.edit-form-container .filter-wrapper .filter-help {
+.quickedit-form-container .filter-wrapper .filter-help {
   padding-left: 0;
   padding-right: 0;
 }
-.edit-form-container .filter-wrapper .form-type-select {
+.quickedit-form-container .filter-wrapper .form-type-select {
   padding-left: 0;
 }
 /**
