--- a/css/quickedit.theme.css
+++ b/css/quickedit.theme.css
@@ -1,80 +1,80 @@
 /**
  * @file
- * Styling for edit module.
+ * Styling for Quick Edit module.
  */
 
 /**
  * Editable.
  */
-.edit-field.edit-editable,
-.edit-field .edit-editable {
+.quickedit-field.quickedit-editable,
+.quickedit-field .quickedit-editable {
   box-shadow: 0 0 0 2px #74b7ff;
 }
 
 /**
  * Highlighted (hovered) editable.
  */
-.edit-field.edit-highlighted,
-.edit-form.edit-highlighted,
-.edit-field .edit-highlighted {
+.quickedit-field.quickedit-highlighted,
+.quickedit-form.quickedit-highlighted,
+.quickedit-field .quickedit-highlighted {
   box-shadow: 0 0 0 1px #74b7ff, 0 0 0 2px #007fff;
 }
-.edit-field.edit-changed,
-.edit-form.edit-changed,
-.edit-field .edit-changed {
+.quickedit-field.quickedit-changed,
+.quickedit-form.quickedit-changed,
+.quickedit-field .quickedit-changed {
   box-shadow: 0 0 0 1px #fec17e, 0 0 0 2px #f7870a;
 }
-.edit-editing.edit-validation-error,
-.edit-form.edit-validation-error {
+.quickedit-editing.quickedit-validation-error,
+.quickedit-form.quickedit-validation-error {
   box-shadow: 0 0 0px 1px #ee8b74, 0 0 0 2px #fa2209;
 }
-.edit-editing.edit-editor-is-popup {
+.quickedit-editing.quickedit-editor-is-popup {
   box-shadow: none;
 }
-.edit-form .form-item .error {
+.quickedit-form .form-item .error {
   border: 1px solid #eea0a0;
 }
 
 /**
  * Default form styling overrides.
  */
-.edit-form form {
+.quickedit-form form {
   padding: 0.5em;
 }
-.edit-form .form-item {
+.quickedit-form .form-item {
   margin: 0;
 }
-.edit-form .form-wrapper {
+.quickedit-form .form-wrapper {
   margin: .5em;
 }
 
 /**
  * Animations.
  */
-.edit-animate-invisible {
+.quickedit-animate-invisible {
   opacity: 0;
 }
-.edit-animate-default {
+.quickedit-animate-default {
   -webkit-transition: all .4s ease;
   transition: all .4s ease;
 }
-.edit-animate-slow {
+.quickedit-animate-slow {
   -webkit-transition: all .6s ease;
   transition: all .6s ease;
 }
-.edit-animate-delay-veryfast {
+.quickedit-animate-delay-veryfast {
   -webkit-transition-delay: .05s;
   transition-delay: .05s;
 }
-.edit-animate-delay-fast {
+.quickedit-animate-delay-fast {
   -webkit-transition-delay: .2s;
   transition-delay: .2s;
 }
-.edit-animate-disable-width {
+.quickedit-animate-disable-width {
   -webkit-transition: width 0s;
   transition: width 0s;
 }
-.edit-animate-only-visibility {
+.quickedit-animate-only-visibility {
   -webkit-transition: opacity .2s ease;
   transition: opacity .2s ease;
 }
@@ -82,7 +82,7 @@
 /**
  * In-place editors that don't use a popup.
  */
-.edit-validation-errors .messages.error {
+.quickedit-validation-errors .messages.error {
   box-shadow: 0 0 1px 1px red, 0 0 3px 3px rgba(153, 153, 153, .5);
   background-color: white;
 }
@@ -90,7 +90,7 @@
 /**
  * Styling specific to the 'form' in-place editor.
  */
-.edit-form {
+.quickedit-form {
   box-shadow: 0 0 30px 4px #4f4f4f;
   background-color: white;
 }
@@ -98,14 +98,14 @@
 /**
  * Toolbars.
  */
-.edit-toolbar-container {
+.quickedit-toolbar-container {
   font-family: 'Source Sans Pro','Lucida Grande', sans-serif;
   padding-bottom: 7px;
   padding-top: 7px;
   -webkit-transition: all 1s;
   transition: all 1s;
 }
-.edit-toolbar-container > .edit-toolbar-content {
+.quickedit-toolbar-container > .quickedit-toolbar-content {
   background-image: -webkit-linear-gradient(top, #fff, #e4e4e4);
   background-image:    -moz-linear-gradient(top, #fff, #e4e4e4);
   background-image:      -o-linear-gradient(top, #fff, #e4e4e4);
@@ -122,7 +122,7 @@
   user-select: none;
   z-index: 2;
 }
-.edit-toolbar-container > .edit-toolbar-pointer {
+.quickedit-toolbar-container > .quickedit-toolbar-pointer {
   background-color: #e4e4e4;
   bottom: 2px;
   box-shadow: 0 0 0 1px #818181, 0px 0px 0 4px rgba(150, 150, 150, 0.5);
@@ -136,15 +136,15 @@
   width: 16px;
   z-index: 1;
 }
-[dir="rtl"] .edit-toolbar-container > .edit-toolbar-pointer {
+[dir="rtl"] .quickedit-toolbar-container > .quickedit-toolbar-pointer {
   left: auto;
   right: 18px;
 }
-.edit-toolbar-container.edit-toolbar-pointer-top > .edit-toolbar-pointer {
+.quickedit-toolbar-container.quickedit-toolbar-pointer-top > .quickedit-toolbar-pointer {
   bottom: auto;
   top: 2px;
 }
-.edit-toolbar-container > .edit-toolbar-lining {
+.quickedit-toolbar-container > .quickedit-toolbar-lining {
   bottom: 7px;
   box-shadow: 0 0 0 1px #818181, 0px 3px 0px 1px rgba(150, 150, 150, 0.5);
   display: block;
@@ -155,43 +155,43 @@
   z-index: 0;
 }
 
-.edit-toolbar-label {
+.quickedit-toolbar-label {
   font-style: italic;
   overflow: hidden;
   padding: 0.333em 0.4em;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.edit-toolbar-label .field:after {
+.quickedit-toolbar-label .field:after {
   content: ' → ';
 }
 
 /* The toolbar; these are not necessarily visible. */
-.edit-toolbar {
+.quickedit-toolbar {
   font-family: 'Droid sans', 'Lucida Grande', sans-serif;
 }
-.edit-toolbar-entity {
+.quickedit-toolbar-entity {
   padding: 0.1667em 0.2em;
 }
 
  /**
   * Info toolgroup.
   */
-.edit-toolbar-fullwidth {
+.quickedit-toolbar-fullwidth {
   width: 100%;
 }
-.edit-toolgroup.wysiwyg-floated {
+.quickedit-toolgroup.wysiwyg-floated {
   float: right; /* LTR */
 }
-[dir="rtl"] .edit-toolgroup.wysiwyg-floated {
+[dir="rtl"] .quickedit-toolgroup.wysiwyg-floated {
   float: left;
 }
-.edit-toolgroup.wysiwyg-main {
+.quickedit-toolgroup.wysiwyg-main {
   clear: both;
   width: 100%;
   padding-left: 0; /* LTR */
 }
-[dir="rtl"] .edit-toolgroup.wysiwyg-main {
+[dir="rtl"] .quickedit-toolgroup.wysiwyg-main {
   padding-left: 0;
   padding-right: 0;
 }
@@ -199,7 +199,7 @@
 /**
  * Buttons.
  */
-.edit-button {
+.quickedit-button {
   background-color: #e4e4e4;
   border: 1px solid #d2d2d2;
   color: #5a5a5a;
@@ -211,29 +211,29 @@
   -webkit-transition: opacity .1s ease;
   transition: opacity .1s ease;
 }
-.edit-button[aria-hidden="true"] {
+.quickedit-button[aria-hidden="true"] {
   visibility: hidden;
   opacity: 0;
 }
-.edit-button + .edit-button {
+.quickedit-button + .quickedit-button {
   margin-left: 0.2em; /* LTR */
 }
-[dir="rtl"] .edit-button + .edit-button {
+[dir="rtl"] .quickedit-button + .quickedit-button {
   margin-left: auto;
   margin-right: 0.25em;
 }
 /* Button with icons. */
-.edit-button:hover,
-.edit-button:active {
+.quickedit-button:hover,
+.quickedit-button:active {
   background-color: #c8c8c8;
   border: 1px solid #a0a0a0;
   color: #2e2e2e;
 }
-.edit-toolbar-container .edit-button.action-cancel {
+.quickedit-toolbar-container .quickedit-button.action-cancel {
   background-color: transparent;
   border: 1px solid transparent;
 }
-.edit-button.action-save {
+.quickedit-button.action-save {
   color: white;
   background-color: #50a0e9;
   background-image: -webkit-linear-gradient(top, #50a0e9, #4481dc);
@@ -242,13 +242,13 @@
   background-image:   linear-gradient(to bottom, #50a0e9, #4481dc);
   border: 1px solid transparent;
 }
-.edit-button.action-save:hover,
-.edit-button.action-save:active {
+.quickedit-button.action-save:hover,
+.quickedit-button.action-save:active {
   border: 1px solid #a0a0a0;
 }
-.edit-button.action-saving,
-.edit-button.action-saving:hover,
-.edit-button.action-saving:active {
+.quickedit-button.action-saving,
+.quickedit-button.action-saving:hover,
+.quickedit-button.action-saving:active {
   background-color: #e4e4e4;
   background-image: none;
   border-color: #d2d2d2;
@@ -258,28 +258,28 @@
 /**
  * Modal.
  */
-#edit_modal {
+#quickedit_modal {
   background-color: white;
   border: 1px solid #0199ff;
   box-shadow: 3px 3px 5px #333;
   font-family: 'Droid sans', 'Lucida Grande', sans-serif;
 }
-#edit_modal .main {
+#quickedit_modal .main {
   font-size: 130%;
   margin: 25px;
   padding-left: 40px; /* LTR */
   background: transparent url('../images/attention.png') no-repeat;
 }
-[dir="rtl"] #edit_modal .main {
+[dir="rtl"] #quickedit_modal .main {
   padding-left: 0;
   padding-right: 40px;
 }
-#edit_modal .actions {
+#quickedit_modal .actions {
   border-top: 1px solid #ddd;
   padding: 0.25em 0.2em;
   text-align: right; /* LTR */
   background: #f5f5f5;
 }
-[dir="rtl"] #edit_modal .actions {
+[dir="rtl"] #quickedit_modal .actions {
   text-align: left;
 }
